--- a/index.html
+++ b/index.html
@@ -1,1 +1,139 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Personal Resume</title>
+    <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <img class="profile-picture"src="doge.jpg" alt="doge image" />
+            <div class="details">
+                <h1 style="font-size: 2.5rem;">Dhruv Roy Talukdar</h1>
+                <strong style="font-size: 1.1rem;">Contacts:</strong>
+                <p>dhruvroy8@gmail.com</p>
+                <p>+91 8348696399</p>
+                <p>Bolpur, Santiniketan</p>
+                <p>Birbhum</p>
+                <p>West Bengal</p>
+            </div>
+        </div>
+        <div class="contents">
+            <div class="profile">
+                <h3 class="subtitle">About Me</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam excepturi quod odit cum aliquid dignissimos perspiciatis asperiores, harum ea voluptas modi recusandae facilis illo quibusdam alias earum fuga nemo perferendis. Laboriosam illum maxime laborum deleniti, odio reiciendis laudantium itaque aut. Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, expedita.</p>
+            </div>
+            <div class="education-container">
+                <div class="education">
+                    <h3 class="subtitle">Education</h3>
+                    <div class="degree">
+                        <strong>B.Sc. (Hons) Computer and System Sciences.</strong>
+                        <p>Visva Bharati</p>
+                        <p>2019-2022</p>
+                        <p>CGPA: 8.5/10</p>
+                    </div>
+                    <div class="degree">
+                        <strong>Senior Secondary (XII), Science</strong>
+                        <p>Bolpur High School</p>
+                        <p>State Board (W.B.C.H.S.E)</p>
+                        <p>Year of Passing : 2019</p>
+                        <p>Percentage : 93%</p>
+                    </div>
+                    <div class="degree">
+                        <strong>Secondary (X)</strong>
+                        <p>Nava Nalanda High School</p>
+                        <p>State Board (W.B.B.S.E)</p>
+                        <p>Year of Passing : 2017</p>
+                        <p>Percentage : 90%</p>
+                    </div>
+                </div>
+                <div class="education">
+                    <h3 class="subtitle">Internships</h3>
+                    <div class="degree">
+                        <strong>Infosys</strong>
+                        <p>System Designer</p>
+                        <p>2016-2017</p>
+                    </div>
+                    <div class="degree">
+                        <strong>IIT Kanpur</strong>
+                        <p>Big Data Analysis</p>
+                        <p>2019</p> 
+                    </div>
+                    <div class="degree">
+                        <strong>Moonshine (Startup)</strong>
+                        <p>Full Stack Web Development</p>
+                        <p>2020</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h3 class="subtitle">Relevant Skills</h3>
+                <div class="row">
+                    <div class="column">
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>Java</strong> </p>
+                            <small>(Intermediate)</small>
+                        </div>
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>Python</strong> </p>
+                            <small>(Advanced)</small>
+                        </div>
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>C++</strong> </p>
+                            <small>(Advanced)</small>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>Web Development</strong></p>
+                            <small>(Advanced)</small>
+                        </div>
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>Machine Learning</strong> </p>
+                            <small>(Beginner)</small>
+                        </div>
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>C Programming</strong> </p>
+                            <small>(Advanced)</small>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>Data Science</strong></p>
+                            <small>(Beginner)</small>
+                        </div>
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>HTML & CSS</strong> </p>
+                            <small>(Advanced)</small>
+                        </div>
+                        <div style="margin:1.2rem 0;">
+                            <p><strong>Javascript</strong> </p>
+                            <small>(Advanced)</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h3 class="subtitle">Languages</h3>
+                <div class="row">
+                    <div style="margin:1.2rem 0;">
+                        <p><strong>Bengali</strong> </p>
+                        <small>Speak , Write and Understand</small>
+                    </div>
+                    <div style="margin:1.2rem 0;">
+                        <p><strong>English</strong> </p>
+                        <small>Speak , Write and Understand</small>
+                    </div>
+                    <div style="margin:1.2rem 0;">
+                        <p><strong>Hindi</strong> </p>
+                        <small>Speak and Understand</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
